2007-06-05  Nick Clifton  <nickc@redhat.com>

	PR gas/4587
	* config/tc-sparc.c (sparc_ip): Terminate tls_ops array.

2007-06-05  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-spu.c (spu_cons): Use deferred_expression.  Handle
	number@ppu.
	(tc_gen_reloc): Abort if neither addsy or subsy is set.
	(md_apply_fix): Don't attempt to resolve SPU_PPU relocs.
	* config/tc-spu.h (md_operand): Handle @ppu without sym.

2007-05-31  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (insns): Allow strex on M profile cores.

2007-05-29  David S. Miller  <davem@davemloft.net>
	    Jakub Jelinek  <jakub@redhat.com>

	PR gas/4558
	* config/tc-sparc.c (md_apply_fix): Fix relocation overflow checks
	for BFD_RELOC_SPARC_WDISP16 and BFD_RELOC_SPARC_WDISP19.

2007-05-29  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-spu.h: Wrap in #ifndef/#endif.  Delete coff macros.

2007-05-29  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-ppc.c: Convert to ISO C.
	* config/tc-ppc.c: Likewise.

2007-05-29  Alan Modra  <amodra@bigpond.net.au>

	* write.h (EXEC_MACHINE_TYPE): Delete.
	(string_byte_count, section_alignment): Delete.

2007-05-28  Nathan Sidwell  <nathan@codesourcery.com>

	* app.c (do_scrub_chars): Cope with \ at end of buffer.

2007-05-26  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-ppc.c (ppc_insert_operand): Truncate sign bits in
	top 32 bits of 64 bit value if so doing results in passing
	range check.  Rewrite sign extension fudges similarly.  Enable
	fudges for powerpc64 too.  Report user value if range check
	fails rather than fudged value.  Negate PPC_OPERAND_NEGATIVE
	range rather than value, also to report user value on failure.

2007-03-25  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (T2_SUBS_PC_LR): Define.
	(do_t_add_sub): Correctly encode subs pc, lr, #const.
	(do_t_mov_cmp): Correctly encode movs pc, lr.

2007-05-24  Steve Ellcey  <sje@cup.hp.com>

	* Makefile.in: Regnerate.
	* configure: Regenerate.
	* aclocal.m4: Regenerate.