@@ -963,3 +963,41 @@ Disassembly of section .text:
 0[0-9a-f]+ <[^>]+> f3de 8f00 	subs	pc, lr, #0
 0[0-9a-f]+ <[^>]+> f3de 8f04 	subs	pc, lr, #4
 0[0-9a-f]+ <[^>]+> f3de 8fff 	subs	pc, lr, #255
+0[0-9a-f]+ <[^>]+> e9f9 240c 	ldrd	r2, r4, \[r9, #48\]!
+0[0-9a-f]+ <[^>]+> e979 240c 	ldrd	r2, r4, \[r9, #-48\]!
+0[0-9a-f]+ <[^>]+> e9e9 240c 	strd	r2, r4, \[r9, #48\]!
+0[0-9a-f]+ <[^>]+> e969 240c 	strd	r2, r4, \[r9, #-48\]!
+0[0-9a-f]+ <[^>]+> e8f9 240c 	ldrd	r2, r4, \[r9\], #48
+0[0-9a-f]+ <[^>]+> e879 240c 	ldrd	r2, r4, \[r9\], #-48
+0[0-9a-f]+ <[^>]+> e8e9 240c 	strd	r2, r4, \[r9\], #48
+0[0-9a-f]+ <[^>]+> e869 240c 	strd	r2, r4, \[r9\], #-48
+0[0-9a-f]+ <[^>]+> f8d5 1301 	ldr.w	r1, \[r5, #769]
+0[0-9a-f]+ <[^>]+> f855 1f30 	ldr.w	r1, \[r5, #48]!
+0[0-9a-f]+ <[^>]+> f855 1d30 	ldr.w	r1, \[r5, #-48]!
+0[0-9a-f]+ <[^>]+> f855 1b30 	ldr.w	r1, \[r5\], #48
+0[0-9a-f]+ <[^>]+> f855 1930 	ldr.w	r1, \[r5\], #-48
+0[0-9a-f]+ <[^>]+> f855 1009 	ldr.w	r1, \[r5, r9\]
+0[0-9a-f]+ <[^>]+> f895 1301 	ldrb.w	r1, \[r5, #769]
+0[0-9a-f]+ <[^>]+> f815 1f30 	ldrb.w	r1, \[r5, #48]!
+0[0-9a-f]+ <[^>]+> f815 1d30 	ldrb.w	r1, \[r5, #-48]!
+0[0-9a-f]+ <[^>]+> f815 1b30 	ldrb.w	r1, \[r5\], #48
+0[0-9a-f]+ <[^>]+> f815 1930 	ldrb.w	r1, \[r5\], #-48
+0[0-9a-f]+ <[^>]+> f815 1009 	ldrb.w	r1, \[r5, r9\]
+0[0-9a-f]+ <[^>]+> f995 1301 	ldrsb.w	r1, \[r5, #769]
+0[0-9a-f]+ <[^>]+> f915 1f30 	ldrsb.w	r1, \[r5, #48]!
+0[0-9a-f]+ <[^>]+> f915 1d30 	ldrsb.w	r1, \[r5, #-48]!
+0[0-9a-f]+ <[^>]+> f915 1b30 	ldrsb.w	r1, \[r5\], #48
+0[0-9a-f]+ <[^>]+> f915 1930 	ldrsb.w	r1, \[r5\], #-48
+0[0-9a-f]+ <[^>]+> f915 1009 	ldrsb.w	r1, \[r5, r9\]
+0[0-9a-f]+ <[^>]+> f8b5 1301 	ldrh.w	r1, \[r5, #769]
+0[0-9a-f]+ <[^>]+> f835 1f30 	ldrh.w	r1, \[r5, #48]!
+0[0-9a-f]+ <[^>]+> f835 1d30 	ldrh.w	r1, \[r5, #-48]!
+0[0-9a-f]+ <[^>]+> f835 1b30 	ldrh.w	r1, \[r5\], #48
+0[0-9a-f]+ <[^>]+> f835 1930 	ldrh.w	r1, \[r5\], #-48
+0[0-9a-f]+ <[^>]+> f835 1009 	ldrh.w	r1, \[r5, r9\]
+0[0-9a-f]+ <[^>]+> f9b5 1301 	ldrsh.w	r1, \[r5, #769]
+0[0-9a-f]+ <[^>]+> f935 1f30 	ldrsh.w	r1, \[r5, #48]!
+0[0-9a-f]+ <[^>]+> f935 1d30 	ldrsh.w	r1, \[r5, #-48]!
+0[0-9a-f]+ <[^>]+> f935 1b30 	ldrsh.w	r1, \[r5\], #48
+0[0-9a-f]+ <[^>]+> f935 1930 	ldrsh.w	r1, \[r5\], #-48
+0[0-9a-f]+ <[^>]+> f935 1009 	ldrsh.w	r1, \[r5, r9\]
